fixed header alignments

--- a/style.css
+++ b/style.css
@@ -3,22 +3,49 @@ html {
 }
 
 
+.header {
+    margin-top: 37px;
+}
+
 #active {
     color: #00043B;
+    font-size: 18px;
+    padding-right: 40px;
 
 }
 
 
 .inactive {
     color: #9698AE;
+    padding-right: 40px;
+    font-size: 18px;
+
 }
 
+#logo {
+    padding-right: 200px;
+}
+
+#sign{
+    margin-left: 500px;
+    background-color: white; 
+    border: 1.5px solid #ED2727;
+    color: #ED2727;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+      
+}
 
 #copy {
     font-size: 72px;
     font-weight: 700;
 
 }
+
+
 
 #red {
     color: #ED2727;
@@ -33,3 +60,4 @@ html {
     background-color: #ED2727;
     padding: 1;
 }
+
